src/check/snapshots/protox__check__tests__generate_group_message.snap
---
source: src/check/tests.rs
expression: "check_ok(\"\\\n        message Foo {\n            optional group Bar = 1 {};\n        }\")"
---
{
  "name": "root.proto",
  "messageType": [
    {
      "name": "Foo",
      "field": [
        {
          "name": "bar",
          "number": 1,
          "label": "LABEL_OPTIONAL",
          "type": "TYPE_GROUP",
          "typeName": ".Foo.Bar",
          "jsonName": "bar"
        }
      ],
      "nestedType": [
        {
          "name": "Bar"
        }
      ]
    }
  ],
  "sourceCodeInfo": {
    "location": [
      {
        "span": [
          0,
          0,
          2,
          9
        ]
      },
      {
        "path": [
          4,
          0
        ],
        "span": [
          0,
          0,
          2,
          9
        ]
      },
      {
        "path": [
          4,
          0,
          1
        ],
        "span": [
          0,
          8,
          11
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0
        ],
        "span": [
          1,
          12,
          37
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0,
          4
        ],
        "span": [
          1,
          12,
          20
        ]
      },
      {
        "path": [
          4,
          0,
          3,
          0
        ],
        "span": [
          1,
          12,
          37
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0,
          5
        ],
        "span": [
          1,
          21,
          26
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0,
          1
        ],
        "span": [
          1,
          27,
          30
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0,
          6
        ],
        "span": [
          1,
          27,
          30
        ]
      },
      {
        "path": [
          4,
          0,
          3,
          0,
          1
        ],
        "span": [
          1,
          27,
          30
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0,
          3
        ],
        "span": [
          1,
          33,
          34
        ]
      }
    ]
  }
}
