src/check/snapshots/protox__check__tests__generate_map_entry_message.snap
---
source: src/check/tests.rs
expression: "check_ok(\"\\\n        message Foo {\n            map<int32, string> bar = 1;\n        }\")"
---
{
  "name": "root.proto",
  "messageType": [
    {
      "name": "Foo",
      "field": [
        {
          "name": "bar",
          "number": 1,
          "label": "LABEL_REPEATED",
          "type": "TYPE_MESSAGE",
          "typeName": ".Foo.BarEntry",
          "jsonName": "bar"
        }
      ],
      "nestedType": [
        {
          "name": "BarEntry",
          "field": [
            {
              "name": "key",
              "number": 1,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_INT32",
              "jsonName": "key"
            },
            {
              "name": "value",
              "number": 2,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_STRING",
              "jsonName": "value"
            }
          ],
          "options": {
            "mapEntry": true
          }
        }
      ]
    }
  ]
}
