src/check/snapshots/protox__check__tests__generate_synthetic_oneof_ordering.snap
---
source: src/check/tests.rs
expression: "check_ok(\"\\\n        syntax = 'proto3';\n\n        message Foo {\n            oneof o1 {\n                float a = 1;\n            }\n\n            optional bool o3 = 2;\n\n            oneof o2 {\n                string b = 3;\n            }\n        }\n    \")"
---
{
  "name": "root.proto",
  "messageType": [
    {
      "name": "Foo",
      "field": [
        {
          "name": "a",
          "number": 1,
          "label": "LABEL_OPTIONAL",
          "type": "TYPE_FLOAT",
          "oneofIndex": 0,
          "jsonName": "a"
        },
        {
          "name": "b",
          "number": 3,
          "label": "LABEL_OPTIONAL",
          "type": "TYPE_STRING",
          "oneofIndex": 1,
          "jsonName": "b"
        },
        {
          "name": "o3",
          "number": 2,
          "label": "LABEL_OPTIONAL",
          "type": "TYPE_BOOL",
          "oneofIndex": 2,
          "jsonName": "o3",
          "proto3Optional": true
        }
      ],
      "oneofDecl": [
        {
          "name": "o1"
        },
        {
          "name": "o2"
        },
        {
          "name": "_o3"
        }
      ]
    }
  ],
  "sourceCodeInfo": {
    "location": [
      {
        "span": [
          0,
          0,
          12,
          9
        ]
      },
      {
        "path": [
          12
        ],
        "span": [
          0,
          0,
          18
        ]
      },
      {
        "path": [
          4,
          0,
          1
        ],
        "span": [
          2,
          16,
          19
        ]
      },
      {
        "path": [
          4,
          0,
          8,
          0,
          1
        ],
        "span": [
          3,
          18,
          20
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0
        ],
        "span": [
          4,
          16,
          28
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0,
          5
        ],
        "span": [
          4,
          16,
          21
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0,
          1
        ],
        "span": [
          4,
          22,
          23
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          0,
          3
        ],
        "span": [
          4,
          26,
          27
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          2
        ],
        "span": [
          7,
          12,
          33
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          2,
          4
        ],
        "span": [
          7,
          12,
          20
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          2,
          5
        ],
        "span": [
          7,
          21,
          25
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          2,
          1
        ],
        "span": [
          7,
          26,
          28
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          2,
          3
        ],
        "span": [
          7,
          31,
          32
        ]
      },
      {
        "path": [
          4,
          0
        ],
        "span": [
          8,
          8,
          12,
          9
        ]
      },
      {
        "path": [
          4,
          0,
          8,
          1,
          1
        ],
        "span": [
          9,
          18,
          20
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          1
        ],
        "span": [
          10,
          16,
          29
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          1,
          5
        ],
        "span": [
          10,
          16,
          22
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          1,
          1
        ],
        "span": [
          10,
          23,
          24
        ]
      },
      {
        "path": [
          4,
          0,
          2,
          1,
          3
        ],
        "span": [
          10,
          27,
          28
        ]
      },
      {
        "path": [
          4,
          0,
          8,
          0
        ],
        "span": [
          12,
          12,
          5,
          13
        ]
      },
      {
        "path": [
          4,
          0,
          8,
          1
        ],
        "span": [
          12,
          12,
          11,
          13
        ]
      }
    ]
  },
  "syntax": "proto3"
}
