src/check/snapshots/protox__check__tests__generated_message_ordering.snap
---
source: src/check/tests.rs
expression: "check_ok(\"\n        extend Bar { optional group Baz = 1 {} }\n\n        message Bar {\n            extensions 1;\n\n            map<int32, string> x = 5;\n\n            oneof foo {\n                group Quz = 3 {}\n            }\n\n            message Nest {}\n        }\")"
---
{
  "name": "root.proto",
  "messageType": [
    {
      "name": "Baz"
    },
    {
      "name": "Bar",
      "field": [
        {
          "name": "x",
          "number": 5,
          "label": "LABEL_REPEATED",
          "type": "TYPE_MESSAGE",
          "typeName": ".Bar.XEntry",
          "jsonName": "x"
        },
        {
          "name": "quz",
          "number": 3,
          "label": "LABEL_OPTIONAL",
          "type": "TYPE_GROUP",
          "typeName": ".Bar.Quz",
          "oneofIndex": 0,
          "jsonName": "quz"
        }
      ],
      "nestedType": [
        {
          "name": "XEntry",
          "field": [
            {
              "name": "key",
              "number": 1,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_INT32",
              "jsonName": "key"
            },
            {
              "name": "value",
              "number": 2,
              "label": "LABEL_OPTIONAL",
              "type": "TYPE_STRING",
              "jsonName": "value"
            }
          ],
          "options": {
            "mapEntry": true
          }
        },
        {
          "name": "Quz"
        },
        {
          "name": "Nest"
        }
      ],
      "extensionRange": [
        {
          "start": 1,
          "end": 2
        }
      ],
      "oneofDecl": [
        {
          "name": "foo"
        }
      ]
    }
  ],
  "extension": [
    {
      "name": "baz",
      "extendee": ".Bar",
      "number": 1,
      "label": "LABEL_OPTIONAL",
      "type": "TYPE_GROUP",
      "typeName": ".Baz",
      "jsonName": "baz"
    }
  ]
}
