src/check/snapshots/protox__check__tests__invalid_message_number-2.snap
---
source: src/check/tests.rs
expression: "check_ok(\"message Foo { optional int32 i = 536870911; }\")"
---
{
  "name": "root.proto",
  "messageType": [
    {
      "name": "Foo",
      "field": [
        {
          "name": "i",
          "number": 536870911,
          "label": "LABEL_OPTIONAL",
          "type": "TYPE_INT32",
          "jsonName": "i"
        }
      ]
    }
  ]
}
