src/check/snapshots/protox__check__tests__invalid_message_number-3.snap
---
source: src/check/tests.rs
expression: "check_ok(\"message Foo { optional int32 i = 18999; }\")"
---
name: root.proto
messageType:
  - name: Foo
    field:
      - name: i
        number: 18999
        label: LABEL_OPTIONAL
        type: TYPE_INT32
        jsonName: i
sourceCodeInfo:
  location:
    - span:
        - 0
        - 0
        - 41
    - path:
        - 4
        - 0
      span:
        - 0
        - 0
        - 41
    - path:
        - 4
        - 0
        - 1
      span:
        - 0
        - 8
        - 11
    - path:
        - 4
        - 0
        - 2
        - 0
      span:
        - 0
        - 14
        - 39
    - path:
        - 4
        - 0
        - 2
        - 0
        - 1
      span:
        - 0
        - 29
        - 30
    - path:
        - 4
        - 0
        - 2
        - 0
        - 3
      span:
        - 0
        - 33
        - 38
    - path:
        - 4
        - 0
        - 2
        - 0
        - 4
      span:
        - 0
        - 14
        - 22
    - path:
        - 4
        - 0
        - 2
        - 0
        - 5
      span:
        - 0
        - 23
        - 28

