src/check/snapshots/protox__check__tests__invalid_message_number.snap
---
source: src/check/tests.rs
expression: "check_ok(\"message Foo { optional int32 i = 1; }\")"
---
{
  "messageType": [
    {
      "name": "Foo",
      "field": [
        {
          "name": "i",
          "number": 1,
          "label": "LABEL_OPTIONAL",
          "type": "TYPE_INT32",
          "jsonName": "i"
        }
      ]
    }
  ]
}
